# Aero-Trace

./: README.md  app.py  main.py  pyproject.toml
dest/: complete-traceability-analysis.json  hlrs-summary.json  llrs-summary.json
dest/temp/: complete-traceability-analysis.json  hlrs-summary.json  llrs-summary.json
hlrs/: __init__.py  config.py  embeddings.py  gemini_client.py  groq_client.py  hlr_classifier.py  main.py  output.py  prompts.py  visualizer.py
llrs/: __init__.py  llr_classifier.py  main.py  output.py  prompts.py
src/: hlrs.json  llrs.json
